--- a/Image_Captioning_Evaluation.ipynb
+++ b/Image_Captioning_Evaluation.ipynb
@@ -22,10 +22,42 @@
         "!pip install pycocoevalcap"
       ],
       "metadata": {
-        "id": "ZNaaBttv6l-L"
+        "id": "ZNaaBttv6l-L",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "34100924-a86f-4421-96cd-f84ef1d81dfe"
       },
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 1,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Cloning into 'zero-shot-image-captioning'...\n",
+            "remote: Enumerating objects: 76, done.\u001b[K\n",
+            "remote: Counting objects: 100% (76/76), done.\u001b[K\n",
+            "remote: Compressing objects: 100% (73/73), done.\u001b[K\n",
+            "remote: Total 76 (delta 32), reused 0 (delta 0), pack-reused 0\u001b[K\n",
+            "Unpacking objects: 100% (76/76), done.\n",
+            "Looking in indexes: https://pypi.org/simple, https://us-python.pkg.dev/colab-wheels/public/simple/\n",
+            "Collecting pycocoevalcap\n",
+            "  Downloading pycocoevalcap-1.2-py3-none-any.whl (104.3 MB)\n",
+            "\u001b[K     |████████████████████████████████| 104.3 MB 75 kB/s \n",
+            "\u001b[?25hRequirement already satisfied: pycocotools>=2.0.2 in /usr/local/lib/python3.7/dist-packages (from pycocoevalcap) (2.0.5)\n",
+            "Requirement already satisfied: matplotlib>=2.1.0 in /usr/local/lib/python3.7/dist-packages (from pycocotools>=2.0.2->pycocoevalcap) (3.2.2)\n",
+            "Requirement already satisfied: numpy in /usr/local/lib/python3.7/dist-packages (from pycocotools>=2.0.2->pycocoevalcap) (1.21.6)\n",
+            "Requirement already satisfied: python-dateutil>=2.1 in /usr/local/lib/python3.7/dist-packages (from matplotlib>=2.1.0->pycocotools>=2.0.2->pycocoevalcap) (2.8.2)\n",
+            "Requirement already satisfied: cycler>=0.10 in /usr/local/lib/python3.7/dist-packages (from matplotlib>=2.1.0->pycocotools>=2.0.2->pycocoevalcap) (0.11.0)\n",
+            "Requirement already satisfied: kiwisolver>=1.0.1 in /usr/local/lib/python3.7/dist-packages (from matplotlib>=2.1.0->pycocotools>=2.0.2->pycocoevalcap) (1.4.4)\n",
+            "Requirement already satisfied: pyparsing!=2.0.4,!=2.1.2,!=2.1.6,>=2.0.1 in /usr/local/lib/python3.7/dist-packages (from matplotlib>=2.1.0->pycocotools>=2.0.2->pycocoevalcap) (3.0.9)\n",
+            "Requirement already satisfied: typing-extensions in /usr/local/lib/python3.7/dist-packages (from kiwisolver>=1.0.1->matplotlib>=2.1.0->pycocotools>=2.0.2->pycocoevalcap) (4.1.1)\n",
+            "Requirement already satisfied: six>=1.5 in /usr/local/lib/python3.7/dist-packages (from python-dateutil>=2.1->matplotlib>=2.1.0->pycocotools>=2.0.2->pycocoevalcap) (1.15.0)\n",
+            "Installing collected packages: pycocoevalcap\n",
+            "Successfully installed pycocoevalcap-1.2\n"
+          ]
+        }
+      ]
     },
     {
       "cell_type": "code",
@@ -40,7 +72,7 @@
       "metadata": {
         "id": "wAZOgYAhaKp8"
       },
-      "execution_count": null,
+      "execution_count": 2,
       "outputs": []
     },
     {
@@ -90,7 +122,7 @@
       "metadata": {
         "id": "m-HeeZ2I7ovH"
       },
-      "execution_count": null,
+      "execution_count": 3,
       "outputs": []
     },
     {
@@ -115,7 +147,7 @@
       "metadata": {
         "id": "UYVhNeAlCFhR"
       },
-      "execution_count": null,
+      "execution_count": 4,
       "outputs": []
     },
     {
@@ -132,7 +164,7 @@
         "# SPICE will take a few minutes the first time, but speeds up due to caching\n",
         "cocoEval.evaluate()\n",
         "# print output evaluation scores\n",
-        "print(\"---------------------------------------------------------\")\n",
+        "print(\"---------------With RVS in Learning Phase--------------------------\")\n",
         "for metric, score in cocoEval.eval.items():\n",
         "    print ('%s: %.3f'%(metric, score))"
       ],
@@ -141,9 +173,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "8VzGLNR5We-s",
-        "outputId": "af6fc94a-31b2-4468-9196-1e0c441d5468"
+        "outputId": "300f879c-6aff-4fe8-a01f-6e38a059e9d8"
       },
-      "execution_count": null,
+      "execution_count": 6,
       "outputs": [
         {
           "output_type": "stream",
@@ -174,7 +206,7 @@
             "CIDEr: 10.000\n",
             "computing SPICE score...\n",
             "SPICE: 1.000\n",
-            "---------------------------------------------------------\n",
+            "---------------With RVS in Learning Phase--------------------------\n",
             "Bleu_1: 1.000\n",
             "Bleu_2: 1.000\n",
             "Bleu_3: 1.000\n",
@@ -201,7 +233,7 @@
         "# SPICE will take a few minutes the first time, but speeds up due to caching\n",
         "cocoEval.evaluate()\n",
         "# print output evaluation scores\n",
-        "print(\"---------------------------------------------------------\")\n",
+        "print(\"---------------Without RVS in Learning Phase--------------------\")\n",
         "for metric, score in cocoEval.eval.items():\n",
         "    print ('%s: %.3f'%(metric, score))"
       ],
@@ -210,9 +242,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "ObMs3-U3mrxb",
-        "outputId": "b91ea6db-8b1f-472f-b5d2-7ccce8190a06"
+        "outputId": "e0bc5188-41c6-42b5-e307-e002dfd5076e"
       },
-      "execution_count": null,
+      "execution_count": 7,
       "outputs": [
         {
           "output_type": "stream",
@@ -243,7 +275,7 @@
             "CIDEr: 8.099\n",
             "computing SPICE score...\n",
             "SPICE: 0.889\n",
-            "---------------------------------------------------------\n",
+            "---------------Without RVS in Learning Phase--------------------\n",
             "Bleu_1: 0.886\n",
             "Bleu_2: 0.853\n",
             "Bleu_3: 0.822\n",
