--- a/Image_Captioning_Evaluation.ipynb
+++ b/Image_Captioning_Evaluation.ipynb
@@ -26,7 +26,7 @@
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "34100924-a86f-4421-96cd-f84ef1d81dfe"
+        "outputId": "a6b70f17-9d9d-4537-b79e-4aaf75ed3e00"
       },
       "execution_count": 1,
       "outputs": [
@@ -35,22 +35,23 @@
           "name": "stdout",
           "text": [
             "Cloning into 'zero-shot-image-captioning'...\n",
-            "remote: Enumerating objects: 76, done.\u001b[K\n",
-            "remote: Counting objects: 100% (76/76), done.\u001b[K\n",
-            "remote: Compressing objects: 100% (73/73), done.\u001b[K\n",
-            "remote: Total 76 (delta 32), reused 0 (delta 0), pack-reused 0\u001b[K\n",
-            "Unpacking objects: 100% (76/76), done.\n",
+            "remote: Enumerating objects: 101, done.\u001b[K\n",
+            "remote: Counting objects: 100% (12/12), done.\u001b[K\n",
+            "remote: Compressing objects: 100% (12/12), done.\u001b[K\n",
+            "remote: Total 101 (delta 3), reused 0 (delta 0), pack-reused 89\u001b[K\n",
+            "Receiving objects: 100% (101/101), 74.75 MiB | 35.45 MiB/s, done.\n",
+            "Resolving deltas: 100% (42/42), done.\n",
             "Looking in indexes: https://pypi.org/simple, https://us-python.pkg.dev/colab-wheels/public/simple/\n",
             "Collecting pycocoevalcap\n",
             "  Downloading pycocoevalcap-1.2-py3-none-any.whl (104.3 MB)\n",
-            "\u001b[K     |████████████████████████████████| 104.3 MB 75 kB/s \n",
+            "\u001b[K     |████████████████████████████████| 104.3 MB 87 kB/s \n",
             "\u001b[?25hRequirement already satisfied: pycocotools>=2.0.2 in /usr/local/lib/python3.7/dist-packages (from pycocoevalcap) (2.0.5)\n",
-            "Requirement already satisfied: matplotlib>=2.1.0 in /usr/local/lib/python3.7/dist-packages (from pycocotools>=2.0.2->pycocoevalcap) (3.2.2)\n",
             "Requirement already satisfied: numpy in /usr/local/lib/python3.7/dist-packages (from pycocotools>=2.0.2->pycocoevalcap) (1.21.6)\n",
-            "Requirement already satisfied: python-dateutil>=2.1 in /usr/local/lib/python3.7/dist-packages (from matplotlib>=2.1.0->pycocotools>=2.0.2->pycocoevalcap) (2.8.2)\n",
+            "Requirement already satisfied: matplotlib>=2.1.0 in /usr/local/lib/python3.7/dist-packages (from pycocotools>=2.0.2->pycocoevalcap) (3.2.2)\n",
             "Requirement already satisfied: cycler>=0.10 in /usr/local/lib/python3.7/dist-packages (from matplotlib>=2.1.0->pycocotools>=2.0.2->pycocoevalcap) (0.11.0)\n",
-            "Requirement already satisfied: kiwisolver>=1.0.1 in /usr/local/lib/python3.7/dist-packages (from matplotlib>=2.1.0->pycocotools>=2.0.2->pycocoevalcap) (1.4.4)\n",
             "Requirement already satisfied: pyparsing!=2.0.4,!=2.1.2,!=2.1.6,>=2.0.1 in /usr/local/lib/python3.7/dist-packages (from matplotlib>=2.1.0->pycocotools>=2.0.2->pycocoevalcap) (3.0.9)\n",
+            "Requirement already satisfied: python-dateutil>=2.1 in /usr/local/lib/python3.7/dist-packages (from matplotlib>=2.1.0->pycocotools>=2.0.2->pycocoevalcap) (2.8.2)\n",
+            "Requirement already satisfied: kiwisolver>=1.0.1 in /usr/local/lib/python3.7/dist-packages (from matplotlib>=2.1.0->pycocotools>=2.0.2->pycocoevalcap) (1.4.4)\n",
             "Requirement already satisfied: typing-extensions in /usr/local/lib/python3.7/dist-packages (from kiwisolver>=1.0.1->matplotlib>=2.1.0->pycocotools>=2.0.2->pycocoevalcap) (4.1.1)\n",
             "Requirement already satisfied: six>=1.5 in /usr/local/lib/python3.7/dist-packages (from python-dateutil>=2.1->matplotlib>=2.1.0->pycocotools>=2.0.2->pycocoevalcap) (1.15.0)\n",
             "Installing collected packages: pycocoevalcap\n",
@@ -173,9 +174,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "8VzGLNR5We-s",
-        "outputId": "300f879c-6aff-4fe8-a01f-6e38a059e9d8"
+        "outputId": "085c43eb-b512-455b-d68a-4fb7981ccf1c"
       },
-      "execution_count": 6,
+      "execution_count": 5,
       "outputs": [
         {
           "output_type": "stream",
@@ -191,6 +192,10 @@
             "index created!\n",
             "tokenization...\n",
             "setting up scorers...\n",
+            "Downloading stanford-corenlp-3.6.0 for SPICE ...\n",
+            "Progress: 384.5M / 384.5M (100.0%)\n",
+            "Extracting stanford-corenlp-3.6.0 ...\n",
+            "Done.\n",
             "computing Bleu score...\n",
             "{'testlen': 84, 'reflen': 84, 'guess': [84, 74, 64, 54], 'correct': [84, 74, 64, 54]}\n",
             "ratio: 0.9999999999880952\n",
@@ -242,9 +247,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "ObMs3-U3mrxb",
-        "outputId": "e0bc5188-41c6-42b5-e307-e002dfd5076e"
+        "outputId": "a76f7ac6-82ff-48a9-bfc0-389a5408e586"
       },
-      "execution_count": 7,
+      "execution_count": 6,
       "outputs": [
         {
           "output_type": "stream",
@@ -284,6 +289,75 @@
             "ROUGE_L: 0.891\n",
             "CIDEr: 8.099\n",
             "SPICE: 0.889\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "imagesIDList, referenceFile = generateReferenceFile(\"/content/zero-shot-image-captioning/data/image_caption.txt\")\n",
+        "predictionFile = generatePredictionFile(\"/content/zero-shot-image-captioning/data/captioning_result_LSTM.txt\", imagesIDList)    \n",
+        "# create coco object and cocoRes object\n",
+        "coco = COCO(referenceFile)\n",
+        "cocoRes = coco.loadRes(predictionFile)\n",
+        "# create cocoEval object by taking coco and cocoRes\n",
+        "cocoEval = COCOEvalCap(coco, cocoRes)\n",
+        "# evaluate results\n",
+        "# SPICE will take a few minutes the first time, but speeds up due to caching\n",
+        "cocoEval.evaluate()\n",
+        "# print output evaluation scores\n",
+        "print(\"-----------Image Encoder --- LSTMDecoder------------\")\n",
+        "for metric, score in cocoEval.eval.items():\n",
+        "    print ('%s: %.3f'%(metric, score))"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "4Vy6Iy7EOWta",
+        "outputId": "ce275373-fc5d-4c30-ebb4-2f4d3cdd05dd"
+      },
+      "execution_count": 7,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "loading annotations into memory...\n",
+            "Done (t=0.00s)\n",
+            "creating index...\n",
+            "index created!\n",
+            "Loading and preparing results...\n",
+            "DONE (t=0.00s)\n",
+            "creating index...\n",
+            "index created!\n",
+            "tokenization...\n",
+            "setting up scorers...\n",
+            "computing Bleu score...\n",
+            "{'testlen': 81, 'reflen': 84, 'guess': [81, 71, 61, 51], 'correct': [56, 42, 31, 26]}\n",
+            "ratio: 0.9642857142742347\n",
+            "Bleu_1: 0.666\n",
+            "Bleu_2: 0.616\n",
+            "Bleu_3: 0.571\n",
+            "Bleu_4: 0.550\n",
+            "computing METEOR score...\n",
+            "METEOR: 0.372\n",
+            "computing Rouge score...\n",
+            "ROUGE_L: 0.665\n",
+            "computing CIDEr score...\n",
+            "CIDEr: 5.108\n",
+            "computing SPICE score...\n",
+            "SPICE: 0.595\n",
+            "-----------Image Encoder --- LSTMDecoder------------\n",
+            "Bleu_1: 0.666\n",
+            "Bleu_2: 0.616\n",
+            "Bleu_3: 0.571\n",
+            "Bleu_4: 0.550\n",
+            "METEOR: 0.372\n",
+            "ROUGE_L: 0.665\n",
+            "CIDEr: 5.108\n",
+            "SPICE: 0.595\n"
           ]
         }
       ]
