--- a/Image_Captioning_Evaluation.ipynb
+++ b/Image_Captioning_Evaluation.ipynb
@@ -307,7 +307,7 @@
         "# SPICE will take a few minutes the first time, but speeds up due to caching\n",
         "cocoEval.evaluate()\n",
         "# print output evaluation scores\n",
-        "print(\"-----------Image Encoder --- LSTMDecoder------------\")\n",
+        "print(\"-----------Resnet101 Encoder --- LSTM Decoder------------\")\n",
         "for metric, score in cocoEval.eval.items():\n",
         "    print ('%s: %.3f'%(metric, score))"
       ],
@@ -316,9 +316,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "4Vy6Iy7EOWta",
-        "outputId": "ce275373-fc5d-4c30-ebb4-2f4d3cdd05dd"
+        "outputId": "0e936cf4-8fa7-4235-c4c4-5716c7288198"
       },
-      "execution_count": 7,
+      "execution_count": 8,
       "outputs": [
         {
           "output_type": "stream",
@@ -349,7 +349,7 @@
             "CIDEr: 5.108\n",
             "computing SPICE score...\n",
             "SPICE: 0.595\n",
-            "-----------Image Encoder --- LSTMDecoder------------\n",
+            "-----------Resnet101 Encoder --- LSTM Decoder------------\n",
             "Bleu_1: 0.666\n",
             "Bleu_2: 0.616\n",
             "Bleu_3: 0.571\n",
