--- a/Step_1_Preparation.ipynb
+++ b/Step_1_Preparation.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "provenance": [],
       "collapsed_sections": [],
-      "authorship_tag": "ABX9TyNfYbzAuoKyew54EYGqO/vJ"
+      "authorship_tag": "ABX9TyPaLoeKHCnYncUbEMb1HbaH"
     },
     "kernelspec": {
       "name": "python3",
@@ -48,7 +48,7 @@
         "id": "RFzlM-uCxgUR",
         "outputId": "360eba30-11aa-4308-85eb-f0824b9415a8"
       },
-      "execution_count": 50,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -131,7 +131,7 @@
         "id": "xlkVd5YKzuaa",
         "outputId": "3a631b59-1ee7-499b-ae9d-4c8ec12cae08"
       },
-      "execution_count": 51,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -168,7 +168,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 52,
+      "execution_count": null,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -320,7 +320,7 @@
       "metadata": {
         "id": "r-NMJDOF9evC"
       },
-      "execution_count": 53,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -344,7 +344,7 @@
       "metadata": {
         "id": "Z5OGC4OS-NXp"
       },
-      "execution_count": 54,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -382,7 +382,7 @@
       "metadata": {
         "id": "6bg7-pkJ-TfC"
       },
-      "execution_count": 55,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -396,7 +396,7 @@
       "metadata": {
         "id": "ZjlMytiIKTmw"
       },
-      "execution_count": 56,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -417,7 +417,7 @@
         "id": "-o_C3J60_PLE",
         "outputId": "0a9353cd-6e2e-48ad-af0c-d713f5f779ae"
       },
-      "execution_count": 57,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -470,7 +470,7 @@
         "id": "GT3x9M5N_dxc",
         "outputId": "0a84df2c-8fc5-48c1-ab36-c376c622a13d"
       },
-      "execution_count": 58,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -519,13 +519,114 @@
         "id": "96dnEaT3_rT0",
         "outputId": "6c2f376f-9e2c-47ae-9e54-adbd4f11f4f5"
       },
-      "execution_count": 59,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
             "Save Symbolic List...\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "# Step 3: Generate Vocabulary"
+      ],
+      "metadata": {
+        "id": "qAZhxZBVX6FY"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "!wget https://raw.githubusercontent.com/CornerSiow/zero-shot-image-captioning/main/Vocabulary.py\n",
+        "!wget https://raw.githubusercontent.com/CornerSiow/zero-shot-image-captioning/main/data/caption_label.txt\n",
+        "!pip install nltk"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "3-wfDlLtXpBu",
+        "outputId": "b0535ab6-2424-4622-a3e8-139239faddb8"
+      },
+      "execution_count": 64,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "--2022-10-10 05:33:46--  https://raw.githubusercontent.com/CornerSiow/zero-shot-image-captioning/main/Vocabulary.py\n",
+            "Resolving raw.githubusercontent.com (raw.githubusercontent.com)... 185.199.110.133, 185.199.109.133, 185.199.111.133, ...\n",
+            "Connecting to raw.githubusercontent.com (raw.githubusercontent.com)|185.199.110.133|:443... connected.\n",
+            "HTTP request sent, awaiting response... 200 OK\n",
+            "Length: 3150 (3.1K) [text/plain]\n",
+            "Saving to: ‘Vocabulary.py.3’\n",
+            "\n",
+            "\rVocabulary.py.3       0%[                    ]       0  --.-KB/s               \rVocabulary.py.3     100%[===================>]   3.08K  --.-KB/s    in 0s      \n",
+            "\n",
+            "2022-10-10 05:33:46 (38.9 MB/s) - ‘Vocabulary.py.3’ saved [3150/3150]\n",
+            "\n",
+            "--2022-10-10 05:33:46--  https://raw.githubusercontent.com/CornerSiow/zero-shot-image-captioning/main/data/caption_label.txt\n",
+            "Resolving raw.githubusercontent.com (raw.githubusercontent.com)... 185.199.108.133, 185.199.109.133, 185.199.110.133, ...\n",
+            "Connecting to raw.githubusercontent.com (raw.githubusercontent.com)|185.199.108.133|:443... connected.\n",
+            "HTTP request sent, awaiting response... 200 OK\n",
+            "Length: 192 [text/plain]\n",
+            "Saving to: ‘caption_label.txt.2’\n",
+            "\n",
+            "caption_label.txt.2 100%[===================>]     192  --.-KB/s    in 0s      \n",
+            "\n",
+            "2022-10-10 05:33:46 (6.41 MB/s) - ‘caption_label.txt.2’ saved [192/192]\n",
+            "\n",
+            "Looking in indexes: https://pypi.org/simple, https://us-python.pkg.dev/colab-wheels/public/simple/\n",
+            "Requirement already satisfied: nltk in /usr/local/lib/python3.7/dist-packages (3.7)\n",
+            "Requirement already satisfied: regex>=2021.8.3 in /usr/local/lib/python3.7/dist-packages (from nltk) (2022.6.2)\n",
+            "Requirement already satisfied: click in /usr/local/lib/python3.7/dist-packages (from nltk) (8.1.3)\n",
+            "Requirement already satisfied: tqdm in /usr/local/lib/python3.7/dist-packages (from nltk) (4.64.1)\n",
+            "Requirement already satisfied: joblib in /usr/local/lib/python3.7/dist-packages (from nltk) (1.2.0)\n",
+            "Requirement already satisfied: importlib-metadata in /usr/local/lib/python3.7/dist-packages (from click->nltk) (5.0.0)\n",
+            "Requirement already satisfied: typing-extensions>=3.6.4 in /usr/local/lib/python3.7/dist-packages (from importlib-metadata->click->nltk) (4.1.1)\n",
+            "Requirement already satisfied: zipp>=0.5 in /usr/local/lib/python3.7/dist-packages (from importlib-metadata->click->nltk) (3.8.1)\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "import nltk\n",
+        "from Vocabulary import Vocabulary\n",
+        "nltk.download('punkt')\n",
+        "vocab = Vocabulary()\n",
+        "vocab.loadCaptions(\"caption_label.txt\")\n",
+        "vocab.saveFile('vocab.pickle')\n",
+        "print(\"Save Vocab...\")"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "Mqxq_9R6YcLY",
+        "outputId": "95a0d860-115e-4491-fed9-6cf59784567a"
+      },
+      "execution_count": 69,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Save Vocab...\n"
+          ]
+        },
+        {
+          "output_type": "stream",
+          "name": "stderr",
+          "text": [
+            "[nltk_data] Downloading package punkt to /root/nltk_data...\n",
+            "[nltk_data]   Package punkt is already up-to-date!\n"
           ]
         }
       ]
