--- a/Step_1_Preparation.ipynb
+++ b/Step_1_Preparation.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "provenance": [],
       "collapsed_sections": [],
-      "authorship_tag": "ABX9TyPaLoeKHCnYncUbEMb1HbaH"
+      "authorship_tag": "ABX9TyMj8iKYeBum0hWpwBx1eBpd"
     },
     "kernelspec": {
       "name": "python3",
@@ -553,7 +553,7 @@
         "id": "3-wfDlLtXpBu",
         "outputId": "b0535ab6-2424-4622-a3e8-139239faddb8"
       },
-      "execution_count": 64,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -612,7 +612,7 @@
         "id": "Mqxq_9R6YcLY",
         "outputId": "95a0d860-115e-4491-fed9-6cf59784567a"
       },
-      "execution_count": 69,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -627,6 +627,113 @@
           "text": [
             "[nltk_data] Downloading package punkt to /root/nltk_data...\n",
             "[nltk_data]   Package punkt is already up-to-date!\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "#Step 4: Remove Non-related Symbolics"
+      ],
+      "metadata": {
+        "id": "zKwGAGhAbf1e"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "print(\"Unique Symbolic: {:d}\".format(len(symbolic_list)))\n",
+        "print(\"Similar Symbolic: {:d}\".format(len(similar_symbolic)))\n",
+        "tokenize = MWETokenizer()\n",
+        "for v in symbolic_list:    \n",
+        "    tokenize.add_mwe(v.split(\"_\"))"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "WHhB1ThpbZfs",
+        "outputId": "a4fc051c-dad5-4eed-fec5-784ddaca3250"
+      },
+      "execution_count": 71,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Unique Symbolic: 587\n",
+            "Similar Symbolic: 836\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "print(\"Read Training Caption...\")\n",
+        "print(\"Start filtering unrelated symbolic...\")\n",
+        "annFile = \"caption_label.txt\"\n",
+        "filtered_symbolic = []\n",
+        "with open(annFile) as file:\n",
+        "    for line in file:\n",
+        "        cap = line.strip().lower()               \n",
+        "        tokens = tokenize.tokenize(word_tokenize(cap)) \n",
+        "        activated = []\n",
+        "        for w in tokens:            \n",
+        "            if w in similar_symbolic:\n",
+        "                for i in similar_symbolic[w]:\n",
+        "                    activated.append(symbolic_list[i])\n",
+        "        \n",
+        "        for w in activated:\n",
+        "          if w not in filtered_symbolic:\n",
+        "            filtered_symbolic.append(w)    "
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "0u8uv_cYbrc3",
+        "outputId": "183135e6-c6c2-4b3a-e652-31e2414cab2c"
+      },
+      "execution_count": 73,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Read Training Caption...\n",
+            "Start filtering unrelated symbolic...\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "print(\"Filtered Result...\")\n",
+        "print(filtered_symbolic)\n",
+        "print(\"Filtered Symbolic: {:d}\".format(len(filtered_symbolic)))\n",
+        "\n",
+        "with open('filtered_symbolic.pickle', 'wb') as handle:\n",
+        "    pickle.dump(filtered_symbolic, handle, protocol=pickle.HIGHEST_PROTOCOL)"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "fJmv-vPDbx3j",
+        "outputId": "346d0063-0fe3-49f4-d0f5-1da0d72a73ea"
+      },
+      "execution_count": 75,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Filtered Result...\n",
+            "['person', 'laptop', 'office', 'banana', 'sink', 'bicycle', 'sky', 'bus']\n",
+            "Filtered Symbolic: 8\n"
           ]
         }
       ]
