--- a/Step_1_Preparation.ipynb
+++ b/Step_1_Preparation.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "provenance": [],
       "collapsed_sections": [],
-      "authorship_tag": "ABX9TyMj8iKYeBum0hWpwBx1eBpd"
+      "authorship_tag": "ABX9TyNsB+CHs0zYHXZ3kWdRoiIO"
     },
     "kernelspec": {
       "name": "python3",
@@ -656,7 +656,7 @@
         "id": "WHhB1ThpbZfs",
         "outputId": "a4fc051c-dad5-4eed-fec5-784ddaca3250"
       },
-      "execution_count": 71,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -696,7 +696,7 @@
         "id": "0u8uv_cYbrc3",
         "outputId": "183135e6-c6c2-4b3a-e652-31e2414cab2c"
       },
-      "execution_count": 73,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -719,13 +719,13 @@
         "    pickle.dump(filtered_symbolic, handle, protocol=pickle.HIGHEST_PROTOCOL)"
       ],
       "metadata": {
+        "id": "fJmv-vPDbx3j",
+        "outputId": "346d0063-0fe3-49f4-d0f5-1da0d72a73ea",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        },
-        "id": "fJmv-vPDbx3j",
-        "outputId": "346d0063-0fe3-49f4-d0f5-1da0d72a73ea"
+        }
       },
-      "execution_count": 75,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -734,6 +734,93 @@
             "Filtered Result...\n",
             "['person', 'laptop', 'office', 'banana', 'sink', 'bicycle', 'sky', 'bus']\n",
             "Filtered Symbolic: 8\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "#Step 5: Generate Training Data"
+      ],
+      "metadata": {
+        "id": "qpenr-kXc8NF"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "import torch\n",
+        "print(\"Start Generate Training Data...\")\n",
+        "annFile = \"caption_label.txt\"\n",
+        "data = []\n",
+        "with open(annFile) as file:\n",
+        "    for line in file:\n",
+        "        cap = line.strip().lower()       \n",
+        "        feature = np.zeros(len(filtered_symbolic))\n",
+        "        tokens = tokenize.tokenize(word_tokenize(cap)) \n",
+        "        activated_symbolic = []\n",
+        "        for w in tokens:            \n",
+        "            if w in similar_symbolic:\n",
+        "                for i in similar_symbolic[w]:\n",
+        "                    # if symbolic_list[i] not in ['sky','waiting_in_line','motorcycle','biking', 'man_made', 'truck','train','train_station_platform']:\n",
+        "                        activated_symbolic.append(symbolic_list[i])\n",
+        "           \n",
+        "        \n",
+        "        \n",
+        "        for symbolic in activated_symbolic:\n",
+        "            if symbolic in filtered_symbolic:               \n",
+        "                feature[filtered_symbolic.index(symbolic)] = 1\n",
+        "       \n",
+        "        # feature = feature / np.max(feature)\n",
+        "        \n",
+        "        print('----------------------------------')\n",
+        "        print(cap, '\\n',activated_symbolic,'\\n', feature)        \n",
+        "                \n",
+        "        data.append((torch.from_numpy(feature), vocab.convertSentenceToToken(cap)))\n",
+        "print('----------------------------------')\n",
+        "print(\"Finish Generate Training Data...\")        \n",
+        "print(\"Save Training Data...\")\n",
+        "with open('training_data.pickle', 'wb') as handle:\n",
+        "    pickle.dump(data, handle, protocol=pickle.HIGHEST_PROTOCOL)\n"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "NYwvTdchdAq_",
+        "outputId": "f1368eab-26db-4628-d4cd-2ffd3ade68e4"
+      },
+      "execution_count": 79,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Start Generate Training Data...\n",
+            "----------------------------------\n",
+            "a person using a laptop in the office \n",
+            " ['person', 'laptop', 'office'] \n",
+            " [1. 1. 1. 0. 0. 0. 0. 0.]\n",
+            "----------------------------------\n",
+            "a person eats a banana in front of a laptop \n",
+            " ['person', 'banana', 'laptop'] \n",
+            " [1. 1. 0. 1. 0. 0. 0. 0.]\n",
+            "----------------------------------\n",
+            "a person washes his face in the sink \n",
+            " ['person', 'sink'] \n",
+            " [1. 0. 0. 0. 1. 0. 0. 0.]\n",
+            "----------------------------------\n",
+            "a person riding a bike on a clear sky \n",
+            " ['person', 'bicycle', 'sky'] \n",
+            " [1. 0. 0. 0. 0. 1. 1. 0.]\n",
+            "----------------------------------\n",
+            "someone is waiting at the bus stop \n",
+            " ['person', 'bus'] \n",
+            " [1. 0. 0. 0. 0. 0. 0. 1.]\n",
+            "----------------------------------\n",
+            "Finish Generate Training Data...\n",
+            "Save Training Data...\n"
           ]
         }
       ]
